--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -33,7 +33,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor='let product of products'>
+                <tr *ngFor='let product of filteredProducts'>
                     <td>
                       <img [src]='product.imageUrl' 
                       *ngIf='showImage'
@@ -42,9 +42,9 @@
                       [style.margin.px]='imageMargin'>
                     </td>
                     <td>{{ product.productName }}</td>
-                    <td>{{ product.productCode | lowercase }}</td>
+                    <td>{{ product.productCode | lowercase | convertToSpaces:'-' }}</td>
                     <td>{{ product.releaseDate }}</td>
-                    <td>{{ product.price | currency:'USD':'symbol':'1.2-2 ' }}</td>
+                    <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
                     <td>{{ product.starRating }}</td>
                 </tr>
               </tbody>
